# miniature-warehouse-robotics

./: .gitignore  .pre-commit-config.yaml  .worktreeinclude  AGENTS.md  README.md  conftest.py  pyproject.toml
.claude/: CLAUDE.md  local-memory.md  settings.json
.codex/: README.md  config.toml  hooks.json
.github/: PULL_REQUEST_TEMPLATE.md
config/: README.md  warehouse.base.yaml
docs/: GLOSSARY.md  README.md  STATUS.md
firmware/: CLAUDE.md  PHASE1_CHECKLIST.md  README.md  phase1-l0-strategy.html  (+1 more)
firmware/spike/uros_app/minicar_client/: CMakeLists.txt  main.c  package.xml
plugins/l3_zone_policy/: README.md  plugin.yaml  pyproject.toml
plugins/l3_zone_policy/fixtures/: red_box_out_of_zone.expected_event.json  red_box_out_of_zone.input.json
plugins/l3_zone_policy/profiles/: customer_a.yaml
plugins/l3_zone_policy/src/l3_zone_policy/: __init__.py  zone_policy.py
ws/src/eval_sdk/: CLAUDE.md  README.md  package.xml  setup.cfg  setup.py
ws/src/eval_sdk/eval_sdk/: __init__.py  cost.py  seed.py  sink.py  stats.py  tracer.py
ws/src/warehouse_bringup/: CLAUDE.md  README.md  package.xml  setup.cfg  setup.py
ws/src/warehouse_bringup/config/: collision_monitor.yaml  nav2_params.yaml  twist_mux.yaml
ws/src/warehouse_bringup/launch/: bringup.launch.py  nav2_bringup.launch.py
ws/src/warehouse_interfaces/: CLAUDE.md  README.md  package.xml  setup.cfg  setup.py
ws/src/warehouse_interfaces/warehouse_interfaces/: __init__.py  config.py  locations.py  paths.py  safety.py  schemas.py  stores.py
ws/src/warehouse_llm_bridge/: CLAUDE.md  README.md  package.xml  setup.cfg  setup.py
ws/src/warehouse_llm_bridge/warehouse_llm_bridge/: action_map.py  character_node.py  character_session.py  conversation_events.py  executor.py  fairness.py  hermes_client.py  llm_bridge.py  llm_client.py  negotiation.py  negotiation_messages.py  persona.py  prompts.py  scheduler.py  seed_prompts.py  self_action_gate.py  situation.py  tracing.py  x_er_bridge.py  x_er_completion.py  x_er_composition.py  x_er_cycle.py
ws/src/warehouse_llm_bridge/warehouse_llm_bridge/operator_feedback/: CLAUDE.md  __init__.py  feedback_box.py  models.py  notice_builder.py  publisher.py  scope_filter.py  sinks.py  templates_ja.py
ws/src/warehouse_llm_bridge/warehouse_llm_bridge/operator_feedback/fixtures/: __init__.py  decision_events.py  golden_ja.py
ws/src/warehouse_llm_bridge/warehouse_llm_bridge/robotics/: __init__.py  adapter_factory.py  er_task.py  observability.py  perception_lanes.py  transcription.py  transport.py
ws/src/warehouse_llm_bridge/warehouse_llm_bridge/robotics/adapters/: __init__.py  enums.py  gemini_er.py
ws/src/warehouse_llm_bridge/warehouse_llm_bridge/robotics/composition/: CLAUDE.md  __init__.py  calibration_gate.py  calibration_source.py  decision_event_envelope.py  duckdb_join.py  factory_registry.py  fixtures.py  loader.py  manifest.py  offline_join_report.py  plugin_manifest.py  plugin_results.py  plugins.py  preflight.py  profile.py  record.py
ws/src/warehouse_llm_bridge/warehouse_llm_bridge/robotics_planning_core/: __init__.py  handoff.py  pipeline.py
ws/src/warehouse_llm_bridge/warehouse_llm_bridge/robotics_planning_core/adapters/: __init__.py  enums.py  gemini_er.py
ws/src/warehouse_llm_bridge/warehouse_llm_bridge/robotics_planning_core/command_compiler/: CLAUDE.md  __init__.py  compiler.py  models.py
ws/src/warehouse_llm_bridge/warehouse_llm_bridge/robotics_planning_core/fixtures/: __init__.py  red_blue_sequence.py
ws/src/warehouse_llm_bridge/warehouse_llm_bridge/robotics_planning_core/models/: __init__.py  base.py  boundary.py  er_task.py  robotics_plan_draft.py
ws/src/warehouse_llm_bridge/warehouse_llm_bridge/robotics_planning_core/task_graph_executor/: CLAUDE.md  __init__.py  executor.py  states.py
ws/src/warehouse_llm_bridge/warehouse_llm_bridge/robotics_planning_core/validator/: CLAUDE.md  __init__.py  context.py  policy.py  report.py  seams.py  validator.py
ws/src/warehouse_llm_bridge/warehouse_llm_bridge/robotics_planning_core/visual_resolver/: CLAUDE.md  __init__.py  models.py  policy.py  resolver.py
ws/src/warehouse_mcp_server/: CLAUDE 2.md  CLAUDE.md  README.md  package.xml  setup.cfg  setup.py
ws/src/warehouse_mcp_server/warehouse_mcp_server/: __main__.py  audit.py  gen_check.py  nav2_client.py  policy_gate.py  server.py  tools.py
ws/src/warehouse_nav2_bridge/: CLAUDE.md  README.md  package.xml  setup.cfg  setup.py
ws/src/warehouse_nav2_bridge/warehouse_nav2_bridge/: app.py  backend.py  core.py  errors.py  head_on_injector.py  nav2_bridge.py
ws/src/warehouse_orchestrator/: CLAUDE.md  README.md  package.xml  setup.cfg  setup.py
ws/src/warehouse_orchestrator/warehouse_orchestrator/: audit_reader.py  conversation_metrics.py  grok_cost.py  kpi.py  kpi_collector.py  langfuse_sink.py  score_send.py  tags.py  trace_id.py
ws/src/warehouse_rmf_adapter/: CLAUDE.md  README.md  package.xml  setup.cfg  setup.py
ws/src/warehouse_rmf_adapter/warehouse_rmf_adapter/: fleet.py  fleet_adapter.py  nav2_router.py  robot_driver.py
ws/src/warehouse_sim/: CLAUDE.md  README.md  package.xml  setup.cfg  setup.py
ws/src/warehouse_sim/launch/: sim.launch.py
ws/src/warehouse_sim/maps/: map.pgm
ws/src/warehouse_sim/rviz/: record.rviz
ws/src/warehouse_sim/spike/: .gitignore  README.md  RESULT.md  run_spike.sh
ws/src/warehouse_sim/spike/config/: bridge.yaml
ws/src/warehouse_sim/spike/worlds/: min_lidar.sdf
ws/src/warehouse_sim/warehouse_sim/: battery.py  battery_publisher.py  bridge.py  layout.py  map_generator.py  scenarios.py  world_generator.py
ws/src/warehouse_traffic/: CLAUDE.md  README.md  package.xml  setup.cfg  setup.py
ws/src/warehouse_traffic/warehouse_traffic/: traffic_logic.py  traffic_manager.py  virtual_scan.py  virtual_scan_logic.py
ws/src/warehouse_web_bridge/: CLAUDE.md  README.md  package.xml  setup.cfg  setup.py
ws/src/warehouse_web_bridge/warehouse_web_bridge/: __init__.py  app.py  coalescer.py  event_log.py  hub.py  ingest.py  kind_map.py  obs_event.py  ratelimit.py  settings.py  state.py  views.py  web_bridge_node.py
(+557 files in other folders)
