<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>warehouse_bringup</name>
  <version>0.0.0</version>
  <description>Launch and config aggregation (single source of node parameters).</description>
  <maintainer email="ryu3124ruyu@gmail.com">kawaguchiryuya</maintainer>
  <license>Apache-2.0</license>

  <!-- Bring-up package: launch-time deps on the nodes it composes (doc16:65). -->
  <!-- nav2_bringup.launch.py reads config safety.max_linear_velocity via load_config to
       wire the MPPI vx_max operating cap (#125), mirroring warehouse_sim/sim.launch.py. -->
  <exec_depend>warehouse_interfaces</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_collision_monitor</exec_depend>  <!-- #126: R-39 proximity reflex (Mode A/B) -->
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>warehouse_traffic</exec_depend>

  <!-- Full Phase 0.5 stack composed by bringup.launch.py (#156): the launch-less node
       packages whose executables are started here. These run in both sim and prod, so they
       are declared. warehouse_sim is DELIBERATELY omitted: sim.launch.py is gated sim:=true
       and resolved lazily (FindPackageShare), so prod/bringup-only installs stay decoupled
       from the sim-only package (same rationale as nav2_bringup.launch.py:253-259); in a dev
       workspace it is co-built. -->
  <exec_depend>warehouse_state</exec_depend>
  <exec_depend>warehouse_safety</exec_depend>
  <exec_depend>warehouse_nav2_bridge</exec_depend>
  <exec_depend>warehouse_llm_bridge</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
