<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>warehouse_interfaces</name>
  <version>0.0.0</version>
  <description>
    Frozen contract: pydantic schemas (situation/command/proposal + gen_id),
    canonical known locations, shared runtime paths, and StateStore/GenStore
    interfaces. ament_python until Phase 4 introduces structured .msg (doc16 §2/§3).
  </description>
  <maintainer email="ryu3124ruyu@gmail.com">kawaguchiryuya</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>python3-pydantic</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
