<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>warehouse_llm_bridge</name>
  <version>0.0.0</version>
  <description>LLM Bridge: commander cycle, exclusivity control, character LLM.</description>
  <maintainer email="ryu3124ruyu@gmail.com">kawaguchiryuya</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>warehouse_interfaces</exec_depend>
  <!-- Hermes Gateway HTTP client (doc13 §5.1); lazily imported in HermesClient.
       Tool dispatch goes through the ToolExecutor seam (injected), so the bridge
       does NOT import warehouse_mcp_server (parallel-workflow §2.1 / CI governance);
       the real backend is wired in S2 (Issue #54). -->
  <exec_depend>python3-httpx</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
