<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>warehouse_llm_bridge</name>
  <version>0.0.0</version>
  <description>LLM Bridge: commander cycle, exclusivity control, character LLM.</description>
  <maintainer email="ryu3124ruyu@gmail.com">kawaguchiryuya</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>warehouse_interfaces</exec_depend>
  <!-- langfuse + openai (Bridge-owned trace via langfuse.openai, doc08/doc13 §7.5)
       are pip-only and lazy-imported; pinned in setup.py install_requires (not as
       rosdep keys). openai supplies the httpx transport. Tool dispatch goes through
       the ToolExecutor seam (injected), so the bridge does NOT import
       warehouse_mcp_server (parallel-workflow §2.1 / CI governance); the real
       backend is wired in PR-2 (Issue #54). -->

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
