<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>warehouse_llm_bridge</name>
  <version>0.0.0</version>
  <description>LLM Bridge: commander cycle, exclusivity control, character LLM.</description>
  <maintainer email="ryu3124ruyu@gmail.com">kawaguchiryuya</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>warehouse_interfaces</exec_depend>
  <!-- Same-track sibling (doc16 §9: feat/llm-bridge owns both packages; CI cross-
       import check is track-aware, #81). main() injects WarehouseTools().dispatch
       into the ToolExecutor seam (S2-PR2 HALF B). -->
  <exec_depend>warehouse_mcp_server</exec_depend>
  <!-- langfuse + openai (Bridge-owned trace via langfuse.openai, doc08/doc13 §7.5)
       are pip-only and lazy-imported; pinned in setup.py install_requires (not as
       rosdep keys). openai supplies the httpx transport. The Nav2 Bridge REST
       forwarder (warehouse_mcp_server.nav2_client, Mode A/B) uses httpx via the
       mcp_server ".[nav2]" extra (lazy). -->

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
