<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>warehouse_mcp_server</name>
  <version>0.0.0</version>
  <description>Warehouse MCP Server: 7 tools + Policy Gate + gen_id validation.</description>
  <maintainer email="ryu3124ruyu@gmail.com">kawaguchiryuya</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>warehouse_interfaces</exec_depend>
  <exec_depend>python3-pydantic</exec_depend>
  <!-- The MCP wire SDK ("mcp") is a pip extra, NOT a rosdep: it is needed only
       to run the stdio server (server.py:main), not for the pure tool logic or
       unit tests. Install with: pip install -e ".[mcp]" -->

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
