<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>warehouse_orchestrator</name>
  <version>0.0.0</version>
  <description>Warehouse Orchestrator: KPI collection and Langfuse scoring.</description>
  <maintainer email="ryu3124ruyu@gmail.com">kawaguchiryuya</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>warehouse_interfaces</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <!-- Domain-free evaluation core: trace_id/tracing/langfuse_sink/kpi/grok_cost import the
       extracted seed/tracer/sink/stats/cost from here (doc21 §1c). -->
  <exec_depend>eval_sdk</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
