<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>warehouse_sim</name>
  <version>0.0.0</version>
  <description>Gazebo world, ros_gz_bridge and sim launch.</description>
  <maintainer email="ryu3124ruyu@gmail.com">kawaguchiryuya</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>warehouse_interfaces</exec_depend>
  <exec_depend>warehouse_description</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <!-- sim_battery_publisher node (#44/#156): synthetic /bot{n}/battery so bots reach
       the situation JSON (doc12:207). The rest of the package is data/launch only. -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
