<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>warehouse_traffic</name>
  <version>0.0.0</version>
  <description>TrafficManager interface (None/Simple) and VirtualScan injection.</description>
  <maintainer email="ryu3124ruyu@gmail.com">kawaguchiryuya</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>warehouse_interfaces</exec_depend>
  <!-- ROBOT_RADIUS single source (parallel-workflow §2.1 shared asset) -->
  <exec_depend>warehouse_description</exec_depend>
  <!-- VirtualScan publishes LaserScan from PoseWithCovarianceStamped inputs -->
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
