<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>minicar_client</name>
  <version>0.0.1</version>
  <description>
    R-37 spike: parameterized micro-ROS host client (pub + sub) modeling one Yahboom
    minicar. ROS namespace and XRCE-DDS client_key are argv-controlled so the spike can
    force a multi-client session collision or keep clients distinct. Pub/sub only — no
    services (keeps the dependency closure off the Jazzy service-introspection breakage).
  </description>
  <maintainer email="ryu3124ruyu@gmail.com">mwr firmware track</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rcl</depend>
  <depend>rclc</depend>
  <depend>std_msgs</depend>
  <depend>microxrcedds_client</depend>
  <depend>rmw_microxrcedds</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
